# Rust_Micro_Services

./: Cargo.toml  FUZZING.md  PHASE3_COMPLETION.md  README.md  TELEMETRY_QUICK_REF.md  TELEMETRY_STATUS.md  deny.toml
.github/workflows/: ci.yml  notify_develop.yml  notify_test.yml  release.yml
crates/app/: Cargo.toml  README.md
crates/app/src/: lib.rs  main.rs  runtime.rs  simulation_api.rs
crates/core/: Cargo.toml
crates/core/benches/: context_switch.rs
crates/core/src/: component.rs  control_loops.rs  lib.rs  mocks.rs  models.rs  scheduler.rs  sensors.rs
crates/demo_receiver/: Cargo.toml
crates/demo_receiver/src/: main.rs
crates/demo_simulator/: Cargo.toml
crates/demo_simulator/src/: main.rs
crates/hal/: Cargo.toml  README.md
crates/hal/src/: device.rs  lib.rs  peripherals.rs  registers.rs  traits.rs
crates/telemetry/: Cargo.toml
crates/telemetry/benches/: serialize.rs
crates/telemetry/src/: collector.rs  config.rs  lib.rs  logger.rs  metrics.rs  mqtt_real.rs  resilience.rs  streaming.rs  transports.rs  types.rs
crates/telemetry/tests/: e2e_integration.rs
docs/: ARCHITECTURE.md  MISSION_ASSESSMENT.md  PRESENTATION_BRIEF.md  SIMULATION_API.md  SIMULATION_API_EXPORT.md  SIMULATION_API_INDEX.md  SIMULATION_API_QUICK_REF.md  SIMULATION_API_REFERENCE.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: telemetry_parser.rs
