[package]
name = "app"
version.workspace = true
edition.workspace = true
license = "MIT"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
rms_core = { path = "../core" }
hal = { path = "../hal" }
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# Default to the Tokio runtime for Embedded Linux / general OS
default = ["tokio_runtime"]
tokio_runtime = []
# RTIC firmware is provided as a scaffold in `crates/firmware`.
# It is not part of the workspace members by default — enable/compile
# separately for a suitable MCU target.
rtic_firmware = []
# Enable mock sensors for development without hardware
mock_sensors = ["rms_core/mock_sensors"]
# Enable real-time control loops (100Hz by default)
realtime_loops = []
