[package]
name = "core"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = "0.7"

[features]
# Enable mock sensor implementations for development without hardware
mock_sensors = []

[dev-dependencies]
criterion = "0.5"
