[package]
name = "demo_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telemetry = { path = "../telemetry" }
