[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "fs", "io-util"] }
async-trait = "0.1"
thiserror = "1.0"

[features]
# Real MQTT implementation (optional)
mqtt_real = []
# Real serial/uart implementation (optional)
serial_real = []
