[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
flate2 = "1.0"
tokio = { version = "1", features = ["sync", "macros", "rt", "fs", "io-util", "time"] }
futures = "0.3"
async-trait = "0.1"
rumqttc = { version = "0.24", optional = true }
backoff = { version = "0.4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
toml = "0.8"

[features]
# Real MQTT implementation (optional)
mqtt_real = ["rumqttc"]
# Real serial/uart implementation (optional)
serial_real = []
# Tracing support
tracing_support = ["tracing-subscriber"]

[dev-dependencies]
criterion = "0.5"
